@@ -125,9 +125,21 @@ Admin.prototype.command = function(command, callback) {
   });
 }
 
-Admin.prototype.validateCollection = function(collectionName, callback) {
+Admin.prototype.validateCollection = function(collectionName, options, callback) {
+  var args = Array.prototype.slice.call(arguments, 1);
+  callback = args.pop();
+  options = args.length ? args.shift() : {};
+
   var self = this;
   var command = {validate: collectionName};
+  var keys = Object.keys(options);
+  
+  // Decorate command with extra options
+  for(var i = 0; i < keys.length; i++) {
+    if(options.hasOwnProperty(keys[i])) {
+      command[keys[i]] = options[keys[i]];
+    }
+  }
 
   this.db.executeDbCommand(command, function(err, doc) {
     if(err != null) return callback(err, null);    
@@ -135,10 +147,12 @@ Admin.prototype.validateCollection = function(collectionName, callback) {
     
     if(doc.ok == 0) {
       return callback(new Error("Error with validate command"), null);
-    } else if(doc.result.constructor != String) {
+    } else if(doc.result != null && doc.result.constructor != String) {
       return callback(new Error("Error with validation data"), null);
-    } else if(doc.result.match(/exception|corrupt/) != null) {
+    } else if(doc.result != null && doc.result.match(/exception|corrupt/) != null) {
       return callback(new Error("Error: invalid collection " + collectionName), null);
+    } else if(doc.valid != null && !doc.valid) {
+      return callback(new Error("Error: invalid collection " + collectionName), null);      
     } else {
       return callback(null, doc);
     }
